* @version-control +0.5.0 enhancement setup expandBtnHTML, collapseBtnHTML and editBtnHTML in your HTML markup #21 * @version-control +0.1.0 option expandBtnClass * @version-control +0.1.0 option collapseBtnClass * @version-control +0.1.0 option event * @version-control +0.5.0 deprecated option onItemExpanded * @version-control +0.5.0 deprecated option onItemCollapsed * @version-control +0.1.0 option onItemExpanded * @version-control +0.1.0 option onItemCollapsed * @version-control +0.1.0 option paramsDataKey * @version-control +0.0.0 prevent event overlapping with deep clone * @version-control +0.1.0 fix onItemAdded event for addNewListItemListener * @version-control +0.5.0 enhancement remember items folding (collapse state) * @version-control +0.5.0 feature mixing instances items (data) together * @version-control +0.1.0 feature inherit blueprints HTML user-set classes #21 * @version-control +0.1.0 fix disappearing lists on unsetParent with multiple list instances * @version-control +0.2.0 enhancement adding noDragClass to an item makes it undraggable * @version-control +0.1.0 feature listen for onCreateItem events * @version-control +0.1.0 feature listen for onItemCollapsed events * @version-control +0.1.0 feature listen for onItemCollapsed events

--- a/jquery.domenu-0.87.53.css
+++ b/jquery.domenu-0.87.53.css
@@ -2,15 +2,17 @@
  * doMenu
  */
 .dd {
-  position:    relative;
-  display:     block;
-  margin:      0;
-  padding:     0;
-  max-width:   600px;
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  width: 60%;
   list-style:  none;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
   font-size:   13px;
   line-height: 20px;
 }
+
 
 .dd-edit-box input,
   /*.dd-edit-box select,*/
@@ -38,8 +40,11 @@
 .dd-edit-box textarea:focus {
   text-shadow: none;
 }
-
-
+.dd-button-container .custom-button-example {
+  color: #000;
+  text-align: center;
+  padding: 1px 4px;
+}
 
 .dd-edit-box select {
   width: 30%;
@@ -62,10 +67,15 @@
   overflow: hidden;
   cursor:   pointer;
   position: absolute;
+  font-style: normal;
 }
 
 .dd-item-blueprint {
   display: none;
+}
+
+.dd > .dd-list {
+  min-height: 80px;
 }
 
 .dd-list {
@@ -160,7 +170,7 @@
   outline: none;
 }
 
-.dd-item .button-container button {
+.dd-item .dd-button-container button {
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.51), rgba(0, 0, 0, 0.14));
   border:           1px solid #898989;
   border-radius:    2px;
@@ -168,7 +178,7 @@
   cursor:           pointer;
 }
 
-.dd-item .button-container .item-add {
+.dd-item .dd-button-container .item-add {
   background-color: #55b3ff;
   border-color:     #376f9c;
   color:            #ffffff;
@@ -176,11 +186,11 @@
   box-shadow:       inset 0 1px 0 #cfe9ff;
 }
 
-.dd-item .button-container .item-add:active {
+.dd-item .dd-button-container .item-add:active {
   box-shadow: inset 0 1px 3px #376f9c;
 }
 
-.dd-item .button-container .item-remove {
+.dd-item .dd-button-container .item-remove {
   background-color: #ff5555;
   border-color:     #a54b4b;
   color:            #5a1111;
@@ -189,12 +199,12 @@
   transition:       background-color 0.35s;
 }
 
-.dd-item .button-container .item-remove:active {
+.dd-item .dd-button-container .item-remove:active {
 
   box-shadow: inset 0 1px 5px #a54b4b;
 }
 
-.dd-item .button-container .item-remove-confirm {
+.dd-item .dd-button-container .item-remove-confirm {
 
   background-color: #ffa155;
 
@@ -203,7 +213,7 @@
   border-color:     #ad7232;
 }
 
-.dd-item .button-container .item-remove-confirm:active {
+.dd-item .dd-button-container .item-remove-confirm:active {
 
 }
 
@@ -211,7 +221,7 @@
   background: #ffce66;
 }
 
-.dd-item .button-container {
+.dd-item .dd-button-container {
   position: absolute;
   height:   19px;
   padding:  0 5px;
@@ -352,7 +362,7 @@
   background: linear-gradient(top, #c8c8c8 0%, #8c8c8c 100%);
 }
 
-.dd3-content:hover .button-container {
+.dd3-content:hover .dd-button-container {
   display:    block;
   transition: display 2s;
 }
